--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -272,6 +272,7 @@ body.page-home > main > header {
             color: $bright-blue;
             margin-bottom: 0;
             font-size: 1.1 * $base-font-size;
+            font-weight: 600;
         }
 
         p {
